<resources>
    <string name="app_name">MisActivos</string>
    <string name="title_activity_ref">RefActivity</string>
    <string name="hint_name">Nombre de usuario</string>
    <string name="hint_pasword">Contraseña</string>
    <string name="hint_login">login</string>
    <string name="text_button_login">Login</string>
    <string name="dontHaveAccount">¿No tienes cuenta?,</string>
    <string name="createHere">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="hint_name_create_account">Nombre</string>
    <string name="text_button_join_us">Unete</string>
    <string name="toolbar_tittle_createAccount">Crear Cuenta</string>
    <string name="username_card">LImber Rojas</string>
    <string name="first_word_card">Hace</string>
    <string name="time_card">4 días</string>
    <string name="likeNUmber_card">10 Me Gusta</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_profile">Yo</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textButtom_gestionServidor">Gestionar Servidor</string>
    <string name="textButtom_gestionarActivos">Gestionar Activos</string>
    <string name="textButtom_gestionarInventario">Gestionar Inventario</string>
    <string name="text_button_getdataserver">Obteber Datos del Servidor</string>
    <string name="text_button_updatedataserver">Actualizar Datos al Servidor</string>
    <string name="text_button_getdata">Cargar Datos Segun Filtro</string>
    <string name="text_button_editaactivos">Continuar Edicion Activos</string>
    <string name="text_button_salir">Salir</string>
    <string name="text_button_inventario">Proceder con Inventario</string>
    <string name="toolbar_tittle_obtenerDatos">Obtener datos del Servidor</string>
    <string name="toolbar_tittle_inventario">Proceso de Inventario</string>
    <string name="toolbar_tittle_gestionservidor">Gestión Servidor</string>
    <string name="toolbar_tittle_menuinicial">Menú Principal</string>
    <string name="hint_tipoactivo">Tipo Activo</string>
    <string name="hint_descripcion_activo">Descripción Activo</string>
    <string name="hint_describe_unidad">Descripción Unidad</string>
    <string name="hint_fecha_ing">Fecha Ingreso</string>
    <string name="hint_estado_fisico">Estado Físico</string>
    <string name="hint_color_activo">Color</string>
    <string name="hint_modelo">Modelo</string>
    <string name="hint_fecha_preventivo">Fecha Preventivo</string>
    <string name="hint_grupo_activo">Grupo</string>
    <string name="hint_gestion">Gestión Ingreso</string>
    <string name="hint_partida_presupuestaria">Partida Presupuestaria</string>
    <string name="hint_numero_serie">Nro. Serie</string>
    <string name="hint_numero_placa">Nro. Placa</string>
    <string name="hint_origen">Origen</string>
    <string name="hint_valor">Valor Bs.</string>
    <string name="hint_valor_residual">Valor Residual</string>
    <string name="hint_comprobante_preventivo">Comprobante Preventivo</string>
    <string name="hint_marca">Marca</string>
    <string name="hint_auxiliar_grupo">Auxiliar</string>
    <string name="hint_observaciones_activo">Observaciones</string>
    <string name="hint_glosa_activo">Glosa</string>
    <string name="text_button_registrar_activo">Registrar Activo</string>
    <string name="toolbar_tittle_createActivo">Crear Activo</string>
    <string name="toolbar_tittle_gestionactivos">Gestión Activos</string>
    <string name="hint_apellido">Apellido</string>
    <string name="text_button_crearEdificio">Crear Edificio</string>
    <string name="textButtom_gestionCruds">Gestionar Registros</string>
    <string name="textButtom_gesOficina">Crud Oficina</string>
    <string name="textButtom_gesDpto">Gestion Departamento</string>
    <string name="textButtom_gesEdificio">Gestion Edificio</string>
    <string name="textButtom_gesProfesion">Gestion Profesion</string>
    <string name="textButtom_gesObs">Gestion Observacion</string>
    <string name="textButtom_gesEstado">Gestion Estados Activo</string>
    <string name="textButtom_gesMotivo">Gestion Motivo</string>
    <string name="textButtom_gesTipoDoc">Gestion Tipo Documentos</string>
    <string name="textButtom_gesCargo">Gestion Cargo</string>
    <string name="textButtom_gesActivos">Gestion Activos</string>
    <string name="textButtom_gesTipoProfesion">Gestion Tipo Profesion</string>
    <string name="textButtom_gesFuncionario">Gestion Funcionarios</string>
    <string name="username_Bottoncard">Edificios</string>
    <string name="hint_sigla_d">Sigla tipo documento</string>
    <string name="hint_nombre_d">Nombre</string>
    <string name="hint_apeu_d">Primer Apellido</string>
    <string name="hint_aped_d">Segundo Apellido</string>
    <string name="hint_dir_d">Dirección Vivienda</string>
    <string name="hint_cargo_d">Cargo que ocupa</string>
    <string name="hint_prof_d">Profesión</string>
    <string name="hint_nrodoc_d">Número Documento</string>
    <string name="hint_nacionalidad_d">Nacionalidad</string>
    <string name="hint_tel_d">Teléfono</string>
    <string name="ipServer">http://192.168.3.204/conexoracle/</string>
    <string name="title_activity_crud_cargos_acrtivity">CrudCargosAcrtivity</string>
    <string name="hint_correlativo">Correlativo</string>
    <string name="hint_estado_bd">Estado BDatos</string>
    <string name="hint_baja">Baja Activo</string>
    <string name="hint_gestion_baja">Gestión Baja</string>
    <string name="text_button_grabar_cambios">Grabar Cambios</string>
    <string name="hint_ubi_geografica">Ubicación Geográfica</string>
</resources>
