<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.GestionCrudsActivity"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <include layout="@layout/actionbar_toolbar"/>

        <RelativeLayout
            android:layout_width="395dp"
            android:layout_height="362dp"
            android:layout_weight="0.6">

            <ImageView
                android:layout_width="209dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/activo_fijo_menu_principal"
                android:contentDescription="TODO" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/paddin_horizontal_login">

                <Button
                    android:id="@+id/gEdificio"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesEdificio"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesEdificio"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />


                <Button
                    android:id="@+id/gOficina"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesOficina"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesOficina"
                    />
                <Button
                    android:id="@+id/gProfesion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesProfesion"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesProfesion"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />

                <Button
                    android:id="@+id/gEstado"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesEstado"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesEstado"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />
                <Button
                    android:id="@+id/gTipoDoc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesTipoDoc"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesTipoDocumento"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />

                <Button
                    android:id="@+id/gCargo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesCargo"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesCargo"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />
                <Button
                    android:id="@+id/gActivos"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesActivos"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesActivos"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />
                <Button
                    android:id="@+id/gTipoProfesion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesTipoProfesion"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesTipoProfesion"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />
                <Button
                    android:id="@+id/gFuncionario"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heigtButtom_MenuCruds"
                    android:text="@string/textButtom_gesFuncionario"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goShowGesFuncionario"
                    android:layout_marginTop="@dimen/topmargin_buttomCruds"
                    />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>